[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vaultutils"
version = "0.4.2"
description = "Config loading, secret rotation and crypto helpers"
requires-python = ">=3.9"
dependencies = ["cryptography>=42", "click>=8.1", "python-dotenv>=1.0"]

[project.scripts]
vaultutils = "vaultutils.cli:main"
